# Praktika2026

./: CMakeLists.txt  README.md  shablon.docx
include/: mylib.hpp
src/: array.hpp  main.cpp  sortShell.cpp  sortShell.h  sortShell.hpp
utils/: input.txt  output.txt
